# p5-rs

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
p5-autogen/: Cargo.toml  constants.rs  global.rs
p5-autogen/src/: ast.rs  gen.rs  main.rs  types.rs
src/: canvas.rs  color.rs  constants.rs  function.rs  geom.rs  global.rs  lib.rs  types.rs
